--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
+#container {
+	margin: auto;
+	width: 1000px;
+}
 #grid {
-	border-left: 1px dotted #999999;
-	border-top: 1px dotted #999999;
+	border-left: 1px dotted #cccccc;
+	border-top: 1px dotted #cccccc;
 	text-align: justify;
 	font-size: 0;
 }
@@ -8,8 +12,8 @@
 	display: inline-block;
 	margin: 0px;
 	padding: 0px;
-	border-right: 1px dotted #999999;
-	border-bottom: 1px dotted #999999;
+	border-right: 1px dotted #cccccc;
+	border-bottom: 1px dotted #cccccc;
 	width: 20px;
 	height: 20px;
 	overflow: hidden;
